# fastp-runner

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cleaner.rs  cli.rs  io.rs  itru.rs  main.rs  parser.rs  runner.rs  utils.rs  wrapper.rs
test_files/: test2.csv
