[package]
name = "fastp-runner"
version = "0.3.1"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
glob = "0.3.0"
spinners = "1.2.0"

[[bin]]
name = "ftr"
path = "src/main.rs"
